<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utt.if26.guillaumecz_tp04.GridActivity"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="vertical">
    <Button
        android:layout_width="160dp"
        android:text="@string/bt1"
        android:id="@+id/gridBtn1"/>
    <Button
        android:layout_width="160dp"
        android:text="@string/bt2"
        android:id="@+id/gridBtn2"/>
    <Button
        android:layout_width="160dp"
        android:text="@string/bt3"
        android:id="@+id/gridBtn3"/>
    <Button
        android:layout_width="160dp"
        android:text="@string/bt4"
        android:id="@+id/gridBtn4"/>
</GridLayout>
